# stemdeck

./: .gitignore  .trivyignore  README.md  pyproject.toml  run.sh
.github/workflows/: linux-release.yml  macos-release.yml  windows-release.yml
.woodpecker/: ci.yml  macos-release.yml  windows-release.yml
app/: main.py
app/api/: jobs.py  router.py  stems.py
app/core/: config.py  models.py  registry.py  settings.py
app/pipeline/: __init__.py  analyze.py  collect.py  download.py  runner.py  separate.py
app/pipeline/separators/: __init__.py  demucs.py
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/ui/: index.html  setup.js
scripts/macos/: make-app.sh  make-dmg.sh  make-runtime-pack.sh
scripts/windows/: make-portable.ps1
static/: index.html  version.json
static/css/: daw.css
static/js/: audioEngine.js  catalog.js  chunkedAudioEngine.js  job.js  main.js  mixer.js  player.js  state.js  transport.js  utils.js
static/js/shared/: jobs.js
static/mobile/: app.js  styles.css
tests/: test_collect.py  test_health_api.py  test_network_gate.py  test_pipeline_runner.py  test_registry_persistence.py  test_separators.py  test_stems_api.py  test_sweep.py
