[package]
name = "stemdeck"
version = "0.4.0-alpha.1"
description = "StemDeck desktop launcher"
authors = ["StemDeck contributors"]
edition = "2021"
rust-version = "1.88"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
zip = { version = "2", default-features = false, features = ["deflate"] }
